--- a/vignettes/mutmatch.html
+++ b/vignettes/mutmatch.html
@@ -382,11 +382,12 @@ copy:</p>
 <span id="cb2-10"><a href="#cb2-10" tabindex="-1"></a>  <span class="at">simtimes =</span> <span class="dv">50</span></span>
 <span id="cb2-11"><a href="#cb2-11" tabindex="-1"></a>)</span>
 <span id="cb2-12"><a href="#cb2-12" tabindex="-1"></a><span class="co">#&gt; Retrieving mutation counts using neighbors baseline mutation model</span></span>
-<span id="cb2-13"><a href="#cb2-13" tabindex="-1"></a><span class="co">#&gt; Fitting the selection model and debiasing estimates</span></span>
-<span id="cb2-14"><a href="#cb2-14" tabindex="-1"></a><span class="co">#&gt; Simulating data using neutral selection model</span></span>
-<span id="cb2-15"><a href="#cb2-15" tabindex="-1"></a><span class="co">#&gt; Performing model fitting on real data for each cohort</span></span>
-<span id="cb2-16"><a href="#cb2-16" tabindex="-1"></a><span class="co">#&gt; Performing model fitting on simulated data for each cohort</span></span>
-<span id="cb2-17"><a href="#cb2-17" tabindex="-1"></a><span class="co">#&gt; Correcting selection estimates using simulated data</span></span></code></pre></div>
+<span id="cb2-13"><a href="#cb2-13" tabindex="-1"></a><span class="co">#&gt; No neighboring genes satisfying the mutation rate similarity criteria were found within the specified window around KRAS. Expanding search to closest genes.</span></span>
+<span id="cb2-14"><a href="#cb2-14" tabindex="-1"></a><span class="co">#&gt; Fitting the selection model and debiasing estimates</span></span>
+<span id="cb2-15"><a href="#cb2-15" tabindex="-1"></a><span class="co">#&gt; Simulating data using neutral selection model</span></span>
+<span id="cb2-16"><a href="#cb2-16" tabindex="-1"></a><span class="co">#&gt; Performing model fitting on real data for each cohort</span></span>
+<span id="cb2-17"><a href="#cb2-17" tabindex="-1"></a><span class="co">#&gt; Performing model fitting on simulated data for each cohort</span></span>
+<span id="cb2-18"><a href="#cb2-18" tabindex="-1"></a><span class="co">#&gt; Correcting selection estimates using simulated data</span></span></code></pre></div>
 <div id="explanation-of-variables-in-the-model" class="section level3">
 <h3>Explanation of Variables in the Model:</h3>
 <ul>
